<resources>
    <string name="app_name">My CV</string>
    <string name="summary_of_experience">Summary of Experience</string>
    <string name="technical_skills">Technical Skills</string>
    <string name="work_history">Work History</string>
    <string name="education">Education</string>
    <string name="interest">Interest</string>
    <string name="company_logo">Company Logo</string>
</resources>
